--- a/10-corso-como_gulp/src/css/_global.scss
+++ b/10-corso-como_gulp/src/css/_global.scss
@@ -50,26 +50,31 @@ button {
   font-weight: 700;
   line-height: 24px;
   text-transform: uppercase;
+  @media (max-width: 1024px) {
+    font-size: 14px;
+    line-height: 20px
+  }
 }
 
 .title-h1 {
   line-height: 60px;
   font-size: 60px;
   @extend %helv-b;
-
   @media (max-width: 1600px) {
     line-height: 50px;
     font-size: 50px;
   }
-
   @media (max-width: 1280px) {
     font-size: 40px;
     line-height: 40px;
   }
-
   @media (max-width: 1024px) {
     font-size: 30px;
     line-height: 30px;
+  }
+  @media (max-width: 500px) {
+    font-size: 24px;
+    line-height: 28px;
   }
 }
 
@@ -78,21 +83,26 @@ button {
   font-size: 21px;
   line-height: 24px;
   letter-spacing: -0.5px;
-
   @media (max-width: 1024px) {
     font-size: 18px;
     line-height: 22px;
+  }
+  @media (max-width: 500px) {
+    font-size: 16px;
+    line-height: 20px;
   }
 }
 
 .title-h3 {
   line-height: 28px;
   font-size: 24px;
-
-
   @media (max-width: 1024px) {
     font-size: 24px;
     line-height: 22px;
+  }
+  @media (max-width: 500px) {
+    line-height: 20px;
+    font-size: 18px;
   }
 }
 
@@ -100,6 +110,9 @@ button {
   font-size: 16px;
   line-height: 21px;
   text-transform: uppercase;
+  @media (max-width: 1024px) {
+    font-size: 14px;
+  }
 }
 
 .color {
@@ -121,7 +134,6 @@ button {
     opacity: .5;
   }
 }
-
 
 .border-botom {
   border-bottom: 2px solid #000;
@@ -191,42 +203,42 @@ button {
   margin-top: 20px;
 }
 
-.flex{
+.flex {
   display: flex;
 
-  &-row{
+  &-row {
     flex-direction: row;
   }
 
-  &-col{
+  &-col {
     flex-direction: column;
   }
 
-  &-m0-20{
+  &-m0-20 {
     margin: 0 -10px;
   }
 }
 
-.col-12{
+.col-12 {
   width: 100%;
 
-  &-m0-20{
+  &-m0-20 {
     margin: 0 10px;
   }
 }
 
-.col-6{
+.col-6 {
   width: 50%;
 
-  &-m0-20{
+  &-m0-20 {
     margin: 0 10px;
   }
 }
 
-.col-3{
+.col-3 {
   width: calc(100% / 3);
 
-  &-m0-20{
+  &-m0-20 {
     margin: 0 10px;
   }
 }
