--- a/10-corso-como_gulp/src/css/blocks/_banner.scss
+++ b/10-corso-como_gulp/src/css/blocks/_banner.scss
@@ -3,11 +3,18 @@
         display: flex;
         flex-wrap: wrap;
         margin: 0 -10px;
+        @media (max-width: 500px) {
+            display: block;
+        }
     }
 
     &__item{
         margin: 0 10px;
         width: calc(50% - 20px);
+        @media (max-width: 500px) {
+            width: 100%;
+            margin: 0;
+        }
     }
     &__box {
         padding-top: 13px;
