--- a/10-corso-como_gulp/src/css/blocks/_form.scss
+++ b/10-corso-como_gulp/src/css/blocks/_form.scss
@@ -27,6 +27,10 @@
         background-position: center center;
         // background-size: 50% 50%;
         order: 2;
+        @media (max-width: 500px) {
+            width: 33px;
+            height: 33px;
+        }
     }
     /* стили при наведении курсора на радио */
     
@@ -55,6 +59,9 @@
     .custom-radio:checked+label::before {
         border-color: #000;
         background-image: url(../img/icon/checkbox.png);
+        @media (max-width: 500px) {
+            background-size: 77%;
+        }
     }
     /* стили для радиокнопки, находящейся в состоянии disabled */
     
@@ -70,6 +77,9 @@
     .news-form {
         &__inner{
             padding: 0 20px;
+            @media (max-width: 500px) {
+                padding: 0;
+            }
         }
         margin-top: 12px;
         &__radio:not(:last-child){
@@ -80,6 +90,9 @@
         }
         &__box {
             display: flex;
+            @media (max-width: 500px) {
+                display: block;
+            }
         }
         &__input {
             opacity: 1;
@@ -90,16 +103,27 @@
             outline: none;
             padding-bottom: 7px;
             font-weight: 600;
+            @media (max-width: 500px) {
+                padding-bottom: 1px;
+                margin: 0 5px 0 0;
+            }
         }
         &__input-border {
             border-bottom: 2px solid #000;
         }
         &__input-name {
             width: 50%;
+            @media (max-width: 500px) {
+                width: 100%;
+                margin: 0 5px 0 0;
+            }
         }
         &__checkbox {
             margin-top: 17px;
             display: flex;
+            @media (max-width: 500px) {
+                display: block;
+            }
         }
         &__btn {
             border: none;
@@ -119,5 +143,11 @@
         }
         &__link {
             display: inline-block;
+        }
+        &__radio:not(:last-child){
+            @media (max-width: 500px) {
+                margin-right: 10px;
+            }
+
         }
     }
