--- a/10-corso-como_gulp/src/css/blocks/_news.scss
+++ b/10-corso-como_gulp/src/css/blocks/_news.scss
@@ -10,6 +10,16 @@
   &__item {
     width: calc(25% - 20px);
     margin: 0 10px;
+    @media (max-width: 764px) {
+      width: calc(50% - 20px);
+      margin: 0 10px;
+    }
+  }
+  &__item.top{
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+
   }
 
   &__box {
@@ -47,9 +57,8 @@
     font-size: 16px;
     line-height: 24px;
     transition: all .3s;
-
-    &:hover {
-      opacity: .5;
+    @media (max-width: 500px) {
+      margin: 12px 0;
     }
   }
 
