--- a/10-corso-como_gulp/src/css/blocks/_slide.scss
+++ b/10-corso-como_gulp/src/css/blocks/_slide.scss
@@ -10,19 +10,35 @@
             opacity: 1;
             color: #c4c4c4;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-            font-family: Helvetica;
+            @extend  %helv-b;
             font-size: 40px;
-            font-weight: 700;
-            font-style: normal;
             margin-right: 15px;
             width: auto;
             height: auto;
             border: none;
+            @media (max-width: 1024px) {
+                font-size: 30px;
+            }
+            @media (max-width: 500px) {
+                font-size: 20px;
+            }
         }
         
         .swiper-pagination-bullet-active {
             color: #000000;
             opacity: 1;
+        }
+        .slide-top__pagination .swiper-pagination-bullet {
+            @media (max-width: 1024px) {
+                color: #fff;
+            }
+
+        }
+        .slide-top__pagination .swiper-pagination-bullet-active {
+            @media (max-width: 1024px) {
+                color: #000;
+            }
+
         }
         
         .slide {
