--- a/10-corso-como_gulp/src/css/lib/_media.scss
+++ b/10-corso-como_gulp/src/css/lib/_media.scss
@@ -1,223 +1,220 @@
 
 
-@media (max-width:1024px) {
-    .title-h3 {
-        font-size: 20px;
-    }
-    .subheading {
-        font-size: 14px;
-    }
-    .title-h2 {
-        font-size: 16px;
-    }
-    .min-subheading {
-        font-size: 14px;
-    }
-    .header {
-        padding:0;
-        .fixed-on & {
-            padding: 20px 0;
-        }
-        &__inner {
-            grid-template-columns: repeat(12, 1fr);
-            align-content: center;
-            justify-content: center;
-            padding: 20px 0;
-        }
-        .fixed-on &__inner {
-            justify-content: center;
-            padding: 0;
-            grid-template-columns: repeat(12, 1fr);
-            align-content: center;
-        }
+//@media (max-width:1024px) {
+    //.title-h3 {
+    //    font-size: 20px;
+    //}
+    //.subheading {
+    //    font-size: 14px;
+    //}
+    //.title-h2 {
+    //    font-size: 16px;
+    //}
+    //.min-subheading {
+    //    font-size: 14px;
+    //}
+    //.header {
+    //    padding:0;
+    //    .fixed-on & {
+    //        padding: 20px 0;
+    //    }
+    //    &__inner {
+    //        grid-template-columns: repeat(12, 1fr);
+    //        align-content: center;
+    //        justify-content: center;
+    //        padding: 20px 0;
+    //    }
+    //    .fixed-on &__inner {
+    //        justify-content: center;
+    //        padding: 0;
+    //        grid-template-columns: repeat(12, 1fr);
+    //        align-content: center;
+    //    }
+    //
+    //    &__burger {
+    //        display: block;
+    //    }
+    //    &__logo {
+    //        grid-column: 4/10;
+    //    }
+    //    .fixed-on  &__logo{
+    //        grid-column: 4/10;
+    //    }
+    //    &__list{
+    //        padding: 30px 0;
+    //    }
+    //    &__language {
+    //        grid-column: 12 / 13;
+    //        margin: 0;
+    //    }
+    //    .fixed-on &__language {
+    //        grid-column: 12 / 13;
+    //        margin: 0;
+    //    }
+    //    &__menu{
+    //        opacity: 0;
+    //        position: absolute;
+    //        top: 0;
+    //        left: 0;
+    //        transform: translateX(-120vw);
+    //        transition: all .3s;
+    //        width: 100%;
+    //    }
+    //    &__menu.active{
+    //        transform: translate(0);
+    //        opacity: 1;
+    //    }
+    //    &-menu__item:not(:last-child) {
+    //        margin-right: 0;
+    //    }
+    //    &-menu__submenu-list{
+    //        position: static;
+    //        top: 0;
+    //        transform: translate(0);
+    //    }
+    //    &-menu__submenu-item{
+    //        margin-right: 0;
+    //    }
+    //    &-menu__submenu-inner{
+    //        display: block;
+    //    }
+    //    &-menu__submenu-item{
+    //        display: block;
+    //    }
+    //    &-menu__item {
+    //        margin-top: 10px;
+    //    }
+    //}
+    //.footer{
+    //    &__list{
+    //        display: block;
+    //    }
+    //    &__item{
+    //        max-width: 100%;
+    //        text-align: center;
+    //        width: 100%;
+    //    }
+    //    &__inner {
+    //        padding: 20px 20px 25px;
+    //    }
+    //    &__item:not(:first-child){
+    //        margin-top: 25px;
+    //    }
+    //}
+//    .slide-top__pagination .swiper-pagination-bullet {
+//        color: #fff;
+//    }
+//    .slide-top__pagination .swiper-pagination-bullet-active {
+//        color: #000;
+//    }
+//    .swiper-pagination-bullet {
+//        font-size: 30px;
+//    }
+//}
 
-        &__burger {
-            display: block;
-        }
-        &__logo {
-            grid-column: 4/10;
-        }
-        .fixed-on  &__logo{
-            grid-column: 4/10;
-        }
-        &__list{
-            padding: 30px 0;
-        }
-        &__language {
-            grid-column: 12 / 13;
-            margin: 0;
-        }
-        .fixed-on &__language {
-            grid-column: 12 / 13;
-            margin: 0;
-        }
-        &__menu{
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform: translateX(-120vw);
-            transition: all .3s;
-            width: 100%;
-        }
-        &__menu.active{
-            transform: translate(0);
-            opacity: 1;
-        }
-        &-menu__item:not(:last-child) {
-            margin-right: 0;
-        }
-        &-menu__submenu-list{
-            position: static;
-            top: 0;
-            transform: translate(0);
-        }
-        &-menu__submenu-item{
-            margin-right: 0;
-        }
-        &-menu__submenu-inner{
-            display: block;
-        }
-        &-menu__submenu-item{
-            display: block;
-        }
-        &-menu__item {
-            margin-top: 10px;
-        }
-    }
-    .footer{
-        &__list{
-            display: block;
-        }
-        &__item{
-            max-width: 100%;
-            text-align: center;
-            width: 100%;
-        }
-        &__inner {
-            padding: 20px 20px 25px;
-        }
-        &__item:not(:first-child){
-            margin-top: 25px;
-        }
-    }
-    .slide-top__pagination .swiper-pagination-bullet {
-        color: #fff;
-    }
-    .slide-top__pagination .swiper-pagination-bullet-active {
-        color: #000;
-    }
-    .swiper-pagination-bullet {
-        font-size: 30px;
-    }
-}
-
-@media (max-width:764px) {
-    .news__item {
-        width: calc(50% - 20px);
-        margin: 0 10px;
-    }
-}
-
-@media (max-width:500px) {
-    .title-h1 {
-        line-height: 40px;
-        font-size: 32px;
-    }
-    .title-h3 {
-        line-height: 20px;
-        font-size: 18px;
-    }
-    .swiper-pagination-bullet {
-        font-size: 20px;
-    }
-    .burger {
-        width: 36px;
-        height: 36px;
-        & span {
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        & span:before {
-            top: -10px;
-        }
-        & span:after {
-            bottom: -10px;
-        }
-    }
-    .header{
-        &.fixed-on{
-            padding: 0;
-        }
-        &__inner{
-            padding: 10px 0;
-        }
-        .fixed-on &__inner{
-            padding: 10px 0;
-        }
-        &__logo{
-            grid-column: 4 / 11;
-        }
-
-        &__language {
-            grid-column: 12 / 13;
-
-        }
-        &__language-item {
-            font-size: 12px;
-            line-height: 18px;
-        }
-        &__language-item:not(:last-child) {
-            margin-right: 10px;
-        }
-
-    }
-    .banner{
-        &__inner{
-            display: block;
-        }
-        &__item{
-            width: 100%;
-            margin: 0;
-        }
-    }
-    .news{
-        &__item.top{
-            width: 100%;
-        }
-        &__nav-full {
-            margin: 12px 0;
-
-        }
-    }
-    .news-form{
-        &__checkbox{
-            display: block;
-        }
-        &__inner{
-            padding: 0;
-        }
-        &__box {
-            display: block;
-        }
-        &__input{
-            padding-bottom: 1px;
-            margin: 0 5px 0 0;
-        }
-        &__input-name {
-            width: 100%;
-            margin: 0 5px 0 0;
-        }
-        &__radio:not(:last-child){
-            margin-right: 10px;
-        }
-    }
-    .custom-radio + label::before {
-        width: 33px;
-        height: 33px;
-
-    }
-    .custom-radio:checked + label::before {
-        background-size: 77%;
-    }
-}
+//@media (max-width:764px) {
+//    .news__item {
+//        width: calc(50% - 20px);
+//        margin: 0 10px;
+//    }
+//}
+//
+//@media (max-width:500px) {
+    //
+    //.title-h3 {
+    //    line-height: 20px;
+    //    font-size: 18px;
+    //}
+    //.swiper-pagination-bullet {
+    //    font-size: 20px;
+    //}
+    //.burger {
+    //    width: 36px;
+    //    height: 36px;
+    //    & span {
+    //        top: 50%;
+    //        transform: translateY(-50%);
+    //    }
+    //    & span:before {
+    //        top: -10px;
+    //    }
+    //    & span:after {
+    //        bottom: -10px;
+    //    }
+    //}
+    //.header{
+    //    &.fixed-on{
+    //        padding: 0;
+    //    }
+    //    &__inner{
+    //        padding: 10px 0;
+    //    }
+    //    .fixed-on &__inner{
+    //        padding: 10px 0;
+    //    }
+    //    &__logo{
+    //        grid-column: 4 / 11;
+    //    }
+    //
+    //    &__language {
+    //        grid-column: 12 / 13;
+    //
+    //    }
+    //    &__language-item {
+    //        font-size: 12px;
+    //        line-height: 18px;
+    //    }
+    //    &__language-item:not(:last-child) {
+    //        margin-right: 10px;
+    //    }
+    //
+    //}
+    //.banner{
+    //    &__inner{
+    //        display: block;
+    //    }
+    //    &__item{
+    //        width: 100%;
+    //        margin: 0;
+    //    }
+    //}
+    //.news{
+    //    &__item.top{
+    //        width: 100%;
+    //    }
+    //    &__nav-full {
+    //        margin: 12px 0;
+    //
+    //    }
+    //}
+//    .news-form{
+//        &__checkbox{
+//            display: block;
+//        }
+//        &__inner{
+//            padding: 0;
+//        }
+//        &__box {
+//            display: block;
+//        }
+//        &__input{
+//            padding-bottom: 1px;
+//            margin: 0 5px 0 0;
+//        }
+//        &__input-name {
+//            width: 100%;
+//            margin: 0 5px 0 0;
+//        }
+//        &__radio:not(:last-child){
+//            margin-right: 10px;
+//        }
+//    }
+//    .custom-radio + label::before {
+//        width: 33px;
+//        height: 33px;
+//
+//    }
+//    .custom-radio:checked + label::before {
+//        background-size: 77%;
+//    }
+//}
