--- a/10-corso-como_gulp/src/css/parts/_header.scss
+++ b/10-corso-como_gulp/src/css/parts/_header.scss
@@ -6,64 +6,154 @@
     background-color: #fff;
     z-index: 25;
     transition: all .5s;
+    @media (max-width: 1024px) {
+        padding:0;
+    }
     &.fixed-on{
         position: fixed;
         padding: 20px 0;
+        @media (max-width: 500px) {
+            padding: 0;
+        }
     }
     &__inner {
         padding: 0 20px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        @media (max-width: 1024px) {
+            grid-template-columns: repeat(12, 1fr);
+            align-content: center;
+            justify-content: center;
+            padding: 20px 0;
+        }
+        @media (max-width: 500px) {
+            padding: 10px 0;
+        }
     }
     .fixed-on &__inner{
         align-content: center;
+        @media (max-width: 1024px) {
+            justify-content: center;
+            padding: 0;
+            grid-template-columns: repeat(12, 1fr);
+            align-content: center;
+        }
+        @media (max-width: 500px) {
+            padding: 10px 0;
+        }
+    }
+    &__burger{
+        @media (max-width: 1024px) {
+            display: block;
+        }
+        @media (max-width: 500px) {
+            width: 36px;
+            height: 36px;
+            & span {
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            & span:before {
+                top: -10px;
+            }
+            & span:after {
+                bottom: -10px;
+            }
+        }
     }
     &__logo{
         grid-column: 1 / 4;
+        @media (max-width: 1024px) {
+            grid-column: 4/10;
+        }
+        @media (max-width: 500px) {
+            grid-column: 4 / 11;
+        }
     }
     .fixed-on &__logo{
         max-width: 250px;
         grid-column: 1 / 2;
         align-self: center;
+        @media (max-width: 1024px) {
+            grid-column: 4/10;
+        }
     }
     &__logo-img {
-
         margin: 0 auto;
         display: block;
         max-width: 512px;
         width: 100%;
     }
+    &__list{
+        @media (max-width: 1024px) {
+            padding: 30px 0;
+        }
+    }
     &__menu {
         grid-column: 2 / 3;
+        @media (max-width: 1024px) {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transform: translateX(-120vw);
+            transition: all .3s;
+            width: 100%;
+        }
+    }
+    &__menu.active{
+        @media (max-width: 1024px) {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
     .fixed-on &__wrap{
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-
     &__language {
         grid-column: 3 / 4;
         display: flex;
         margin: 29px 0 0 auto;
         text-transform: uppercase;
+        @media (max-width: 1024px) {
+            grid-column: 12 / 13;
+            margin: 0;
+        }
+        @media (max-width: 500px) {
+            grid-column: 12 / 13;
+        }
     }
     .fixed-on &__language{
         position: static;
         padding: 0;
         margin: 0 0 0 auto;
+        @media (max-width: 1024px) {
+            grid-column: 12 / 13;
+            margin: 0;
+        }
     }
     &__language-item:not(:last-child) {
         margin-right: 15px;
+        @media (max-width: 500px) {
+            margin-right: 10px;
+        }
     }
     &__language-item {
         font-size: 16px;
         line-height: 24px;
         transition: all .3s;
+
     }
     &__language-item.active {
         opacity: .5;
     }
+    &.active{
+        display: block;
+    }
+
+
 }
 
 .header-menu {
@@ -73,12 +163,25 @@
         display: flex;
         padding-top: 30px;
         background-color: #fff;
+        @media (max-width: 1024px) {
+            display: block;
+            text-align: center;
+        }
     }
     .fixed-on &__list{
         padding: 0;
     }
+    &__item {
+        margin-top: 10px;
+        @media (max-width: 1024px) {
+            margin-right: 0;
+        }
+    }
     &__item:not(:last-child) {
         margin-right: 70px;
+        @media (max-width: 1024px) {
+            margin-right: 0;
+        }
     }
     &__link {
         transition: all .3s;
@@ -86,7 +189,6 @@
             opacity: .5;
         }
     }
-
     &__submenu-list {
         width: 100%;
         position: absolute;
@@ -94,6 +196,11 @@
         transform: translateY(100%);
         left: 0;
         z-index: 2;
+        @media (max-width: 1024px) {
+            position: static;
+            top: 0;
+            transform: translate(0);
+        }
     }
     &__submenu-inner {
         width: 100%;
@@ -102,13 +209,18 @@
         display: flex;
         background-color: #fff;
         justify-content: center;
+        @media (max-width: 1024px) {
+            display: block;
+        }
+    }
+    &__submenu-item {
+        @media (max-width: 1024px) {
+            margin-right: 0;
+            display: block;
+        }
     }
 }
 
 .submenu {
     display: none;
-}
-
-.header__menu.active{
-    display: block;
 }
