--- a/10-corso-como_gulp/src/css/blocks/_form.scss
+++ b/10-corso-como_gulp/src/css/blocks/_form.scss
@@ -103,6 +103,9 @@
             outline: none;
             padding-bottom: 7px;
             font-weight: 600;
+            @media (max-width: 1024px) {
+                margin-top: 3px;
+            }
             @media (max-width: 500px) {
                 padding-bottom: 1px;
                 margin: 0 5px 0 0;
