--- a/10-corso-como_gulp/src/css/blocks/_news.scss
+++ b/10-corso-como_gulp/src/css/blocks/_news.scss
@@ -38,6 +38,9 @@
     width: 100%;
     padding-top: 52px;
     margin-top: 16px;
+    @media (max-width: 500px) {
+      padding: 0;
+    }
   }
 
   &__nav-subtitle {
