--- a/10-corso-como_gulp/src/css/blocks/_slide.scss
+++ b/10-corso-como_gulp/src/css/blocks/_slide.scss
@@ -63,6 +63,10 @@
         .slide-top {
             &__container {
                 max-width: 1440px;
+                @media (max-width: 500px) {
+                    padding: 0;
+                    margin: 0 auto;
+                }
             }
             &__title {
                 margin-top: 3px;
